update Java to LTS 17